--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -35,3 +35,26 @@ jobs:
 
     - name: Build
       run: npm run build
+   
+   - name: Upload artifact to enable deployment
+      uses: actions/upload-artifact@v3
+      with:
+          name: production-files
+          path: ./dist
+ # Deploy Job
+    deploy:
+        # Add a dependency to the build job
+        needs: build
+        # Specify runner + deployment step
+        runs-on: ubuntu-latest
+        steps:
+          - name: Download artifact
+            uses: actions/download-artifact@v3
+            with:
+              name: production-files
+              path: ./dist
+          - name: Deploy to GitHub Pages
+            uses: peaceiris/actions-gh-pages@v3
+            with:
+              github_token: ${{ secrets.CD }}
+              publish_dir: ./dist
