--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -34,6 +34,8 @@ jobs:
         run: npm test
 
       - name: Build
+        env:
+          CI: false
         run: npm run build
       
       - name: Upload artifact to enable deployment
