--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -43,7 +43,20 @@ jobs:
         with:
           name: production-files
           path: ./build
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'  
+      
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt 
 
+      - name: Run Python tests
+        run: |
+          pytest
+      
   deploy:
     # Add a dependency to the build job
     needs: build
@@ -59,4 +72,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.CD }}
-          publish_dir: ./build
+          publish_dir: ./build 
